[package]
name = "bitlight-rgb20-contract"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplify = "4.7.0"
strict_encoding = "2.7.0"
bp-core = "0.11.0-beta.8"
rgb-std = { version = "0.11.0-beta.8", features = ["serde", "fs"] }
rgb-schemata = "0.11.0-beta.8"
rgb-interfaces = "0.11.0-beta.8"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
bdk = { version = "1.0.0-alpha.11", default-features = false }
bdk_esplora = { version = "0.17.0", features = ["blocking"] }
hex_lit = "0.1.1"

[features]
all = []

[profile.release]
debug = 0
lto = "off"
